# jax2sympy

./: LICENSE  README.md  citation.cff  pyproject.toml
.github/workflows/: publish.yml
jax2sympy/: __init__.py  sparse_manipulations.py  sparsify.py  translate.py
src/jax2sympy/: primitive_mapping.py  sparse_manipulations.py  sparsify.py  sparsity.py  sparsity_mk2.py  translate.py
src/jax2sympy/problems/: jaxpr_experiment.py  mpc.py  surya.py
src/problems/: mpc.py
tests/: test_jax_upgrade_surface.py
