[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax2sympy"
version = "0.0.1"
description = "Translate jaxpr graphs into elementwise SymPy expressions for symbolic analysis."
authors = [
    { name = "John Viljoen", email = "johnviljoen2@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["jax", "sympy", "jaxpr", "symbolic", "sparsity", "jacobian", "hessian"]

dependencies = [
    "matplotlib",
    "tqdm",
    "jax", # [cuda13]",
    "sympy" # symbolic derivations
]

[project.urls]
Homepage = "https://github.com/johnviljoen/jax2sympy"
Repository = "https://github.com/johnviljoen/jax2sympy"

[tool.setuptools.packages.find]
include = ["jax2sympy*"]  # only package the jax2sympy package, not tests/etc.

